--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=SkillGro
 APP_ENV=local
-APP_KEY=base64:vjy1s/onp4rRqMeX5W6zizgkwlSj+Pd9I4lTi2LA69Q=
+APP_KEY=
 APP_DEBUG=false
 DEBUGBAR_ENABLED=false
 APP_URL=http://localhost:8000
